Added manifest.json for PWA

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,11 @@
             "src": "/images/favicon.png",
             "sizes": "512x512",
             "type": "image/png"
+        },
+        {
+            "src": "/images/favicon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
         }
     ]
 }
