--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "description": "A fun game to pop sinchan",
     "version": "v0.1",
     "short_name": "Face Frenzy",
-    "start_url": "/index.html",
+    "start_url": "https://rohan3004.github.io/Face-Frenzy/",
     "display": "standalone",
     "theme_color": "#87A922",
     "background_color": "#FCDC2A",
@@ -14,7 +14,7 @@
             "type": "image/png"
         },
         {
-            "src": "/images/favicon-192x192.png",
+            "src": "/images/icon.png",
             "sizes": "192x192",
             "type": "image/png"
         }
