--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "description": "A fun game to pop sinchan",
     "version": "v0.1",
     "short_name": "Face Frenzy",
-    "start_url": "https://rohan3004.github.io/Face-Frenzy/",
+    "start_url": "/",
     "display": "standalone",
     "theme_color": "#87A922",
     "background_color": "#FCDC2A",
