--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,18 @@
     "description": "A fun game to pop sinchan",
     "version": "v0.1",
     "short_name": "Face Frenzy",
-    "start_url": "/",
+    "start_url": "https://rohan3004.github.io/Face-Frenzy/",
     "display": "standalone",
     "theme_color": "#87A922",
     "background_color": "#FCDC2A",
     "icons": [
         {
-            "src": "/images/favicon.png",
+            "src": "https://rohan3004.github.io/Face-Frenzy/images/favicon.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "/images/icon.png",
+            "src": "https://rohan3004.github.io/Face-Frenzy/images/icon.png",
             "sizes": "192x192",
             "type": "image/png"
         }
